// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.525,
    "fiber": 0.244,
    "ice": 45.166,
    "ingredients": [
      {
        "grams": 477,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 238,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 50,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 176,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 57,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 41.843,
    "pac": 29.19,
    "pod": 22.849,
    "protein": 0.171,
    "score": 10,
    "solids": 30.238,
    "sugars": 23.608,
    "temperature": -11,
    "violations": [],
    "water": 69.762,
  },
  {
    "batch": 1000,
    "fat": 6.082,
    "fiber": 0.252,
    "ice": 50.28,
    "ingredients": [
      {
        "grams": 420,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 264,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 55,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 53.334,
    "pac": 35.633,
    "pod": 24.153,
    "protein": 0.189,
    "score": 10,
    "solids": 33.188,
    "sugars": 25.899,
    "temperature": -12,
    "violations": [],
    "water": 66.812,
  },
  {
    "batch": 1000,
    "fat": 6.413,
    "fiber": 0.256,
    "ice": 49.385,
    "ingredients": [
      {
        "grams": 389,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 278,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 58,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 63.681,
    "pac": 41.692,
    "pod": 23.845,
    "protein": 0.199,
    "score": 10,
    "solids": 34.53,
    "sugars": 26.856,
    "temperature": -13,
    "violations": [],
    "water": 65.47,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 7.701,
    "fiber": 0.173,
    "ice": 48.915,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 77,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 7,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 38.291,
    "pac": 26.802,
    "pod": 18.648,
    "protein": 0.918,
    "score": 10,
    "solids": 30.004,
    "sugars": 17.462,
    "temperature": -11,
    "violations": [],
    "water": 69.996,
  },
  {
    "batch": 1000,
    "fat": 3.701,
    "fiber": 0.173,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 37,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 40,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 7,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.005,
    "pac": 30.802,
    "pod": 22.648,
    "protein": 0.918,
    "score": 10,
    "solids": 30.004,
    "sugars": 21.462,
    "temperature": -12,
    "violations": [],
    "water": 69.996,
  },
  {
    "batch": 1000,
    "fat": 4.401,
    "fiber": 0.173,
    "ice": 49.781,
    "ingredients": [
      {
        "grams": 874,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 44,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 66,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 14,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.015,
    "pac": 33.506,
    "pod": 24.949,
    "protein": 0.878,
    "score": 10,
    "solids": 33.008,
    "sugars": 23.97,
    "temperature": -13,
    "violations": [],
    "water": 66.992,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.77,
  "fiber": 3.927,
  "ice": 49.5,
  "ingredients": [
    {
      "grams": 383,
      "id": "PI-ING-001409",
      "main": false,
      "name": "WATER · Liquid",
    },
    {
      "grams": 253,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 53,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 96,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 152,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE · Sweetener · Dry",
    },
    {
      "grams": 41,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.716,
  "pac": 37.677,
  "pod": 21.405,
  "protein": 1.762,
  "score": 10,
  "solids": 36.906,
  "sugars": 24.621,
  "violations": [],
  "water": 63.094,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 6.533,
    "fiber": 8.409,
    "ice": 52.296,
    "ingredients": [
      {
        "grams": 284,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 565,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 83,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 66,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.088,
    "pac": 20.017,
    "pod": 13.089,
    "protein": 5.372,
    "score": 10,
    "solids": 42.953,
    "sugars": 14.372,
    "temperature": -11,
    "violations": [],
    "water": 57.047,
  },
  {
    "batch": 1000,
    "fat": 6.303,
    "fiber": 8.119,
    "ice": 50.357,
    "ingredients": [
      {
        "grams": 274,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 561,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 47,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 116,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.087,
    "pac": 25.151,
    "pod": 13.027,
    "protein": 5.183,
    "score": 10,
    "solids": 42.953,
    "sugars": 15.372,
    "temperature": -12,
    "violations": [],
    "water": 57.047,
  },
  {
    "batch": 1000,
    "fat": 6.142,
    "fiber": 7.916,
    "ice": 49.776,
    "ingredients": [
      {
        "grams": 267,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 558,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 24,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 149,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.191,
    "pac": 28.614,
    "pod": 13.062,
    "protein": 5.05,
    "score": 10,
    "solids": 42.989,
    "sugars": 16.108,
    "temperature": -13,
    "violations": [],
    "water": 57.011,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.314,
    "fiber": 0.173,
    "ice": 45.332,
    "ingredients": [
      {
        "grams": 471,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 241,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 50,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 178,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 41.685,
    "pac": 29.096,
    "pod": 22.897,
    "protein": 0.1,
    "score": 10,
    "solids": 30.202,
    "sugars": 24.124,
    "temperature": -11,
    "violations": [],
    "water": 69.798,
  },
  {
    "batch": 1000,
    "fat": 5.844,
    "fiber": 0.173,
    "ice": 50.29,
    "ingredients": [
      {
        "grams": 420,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 264,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 55,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 52.225,
    "pac": 35.097,
    "pod": 23.891,
    "protein": 0.11,
    "score": 10,
    "solids": 32.797,
    "sugars": 26.134,
    "temperature": -12,
    "violations": [],
    "water": 67.203,
  },
  {
    "batch": 1000,
    "fat": 6.162,
    "fiber": 0.173,
    "ice": 49.421,
    "ingredients": [
      {
        "grams": 389,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 278,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 58,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 62.425,
    "pac": 41.127,
    "pod": 23.57,
    "protein": 0.115,
    "score": 10,
    "solids": 34.119,
    "sugars": 27.104,
    "temperature": -13,
    "violations": [],
    "water": 65.881,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 11.976,
    "fiber": 2.833,
    "ice": 52.36,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 549,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 4,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 177,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.028,
    "pac": 20.117,
    "pod": 19.906,
    "protein": 5.326,
    "score": 10,
    "solids": 42.568,
    "sugars": 19.949,
    "temperature": -11,
    "violations": [],
    "water": 57.432,
  },
  {
    "batch": 1000,
    "fat": 11.989,
    "fiber": 2.833,
    "ice": 50.357,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 531,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 14,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 129,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.128,
    "pac": 25.154,
    "pod": 19.114,
    "protein": 5.33,
    "score": 10,
    "solids": 42.998,
    "sugars": 20.342,
    "temperature": -12,
    "violations": [],
    "water": 57.002,
  },
  {
    "batch": 1000,
    "fat": 11.971,
    "fiber": 2.833,
    "ice": 49.78,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 541,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 92,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 99,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.059,
    "pac": 28.553,
    "pod": 18.261,
    "protein": 5.324,
    "score": 10,
    "solids": 42.961,
    "sugars": 20.356,
    "temperature": -13,
    "violations": [],
    "water": 57.039,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.622,
  "fiber": 0.977,
  "ice": 49.78,
  "ingredients": [
    {
      "grams": 403,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 402,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 45,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 103,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 45,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE · Sweetener · Dry",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
  ],
  "npac": 50.028,
  "pac": 33.512,
  "pod": 24.276,
  "protein": 0.688,
  "score": 10,
  "solids": 33.014,
  "sugars": 24.187,
  "violations": [],
  "water": 66.987,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.284,
  "fiber": 0.725,
  "ice": 49.781,
  "ingredients": [
    {
      "grams": 551,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 276,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 42,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 97,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 32,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE · Sweetener · Dry",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
  ],
  "npac": 50.017,
  "pac": 33.506,
  "pod": 24.822,
  "protein": 0.748,
  "score": 10,
  "solids": 33.01,
  "sugars": 24.383,
  "violations": [],
  "water": 66.99,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 4.537,
    "fiber": 1.745,
    "ice": 51.515,
    "ingredients": [
      {
        "grams": 786,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 43,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 3,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.828,
    "pac": 25.079,
    "pod": 22.258,
    "protein": 0.554,
    "score": 10,
    "solids": 30.003,
    "sugars": 21.435,
    "temperature": -11,
    "violations": [],
    "water": 69.997,
  },
  {
    "batch": 1000,
    "fat": 1.536,
    "fiber": 1.739,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 783,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 13,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 36,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.028,
    "pac": 30.817,
    "pod": 24.575,
    "protein": 0.552,
    "score": 10,
    "solids": 30.006,
    "sugars": 24.453,
    "temperature": -12,
    "violations": [],
    "water": 69.994,
  },
  {
    "batch": 1000,
    "fat": 3.825,
    "fiber": 1.667,
    "ice": 49.779,
    "ingredients": [
      {
        "grams": 747,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 36,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 155,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 60,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.085,
    "pac": 33.548,
    "pod": 24.926,
    "protein": 0.527,
    "score": 10,
    "solids": 33.018,
    "sugars": 25.353,
    "temperature": -13,
    "violations": [],
    "water": 66.982,
  },
]
`;
